--- a/index.html
+++ b/index.html
@@ -107,13 +107,7 @@
       <hr>
 
       <h2>Jet de Blessure ☠️</h2>
-      <label>Châtaigne (blessure) :
-        <select id="mbInjury">
-          <option value="0">Aucune</option>
-          <option value="1">+1</option>
-          <option value="2">+2</option>
-        </select>
-      </label>
+      <label><input type="checkbox" id="thickSkull"> Crâne épais</label>
 
       <label><input type="checkbox" id="stunty"> Minus (+1 blessure)</label>
 
