--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </select>
       </label>
 
-      <label><input type="checkbox" id="claw"> 🦅 Griffe (armure = 8)</label>
-      <label><input type="checkbox" id="armorReroll"> 🔁 Relance d'armure</label>
+      <label><input type="checkbox" id="claw"> Griffe </label>
+      <label><input type="checkbox" id="armorReroll"> Relance d'armure</label>
 
       <div class="result armor-result" id="armorResult">Chance de passer l'armure : 0.00%</div>
 
@@ -121,8 +121,8 @@
         </select>
       </label>
 
-      <label><input type="checkbox" id="thickSkull"> 🪨 Crâne épais</label>
-      <label><input type="checkbox" id="stunty"> 🤏 Minus (+1 blessure)</label>
+      <label><input type="checkbox" id="thickSkull"> Crâne épais</label>
+      <label><input type="checkbox" id="stunty"> Minus (+1 blessure)</label>
 
       <label>Bonus blessure :
         <select id="injuryBonus">
